2009-04-02 [colin]	3.7.1cvs34

	* src/common/utils.h
		Fix previous (thanks to Marcus :)

2009-04-02 [colin]	3.7.1cvs33

	* src/common/utils.h
	* src/etpan/etpan-thread-manager.c
		pipe() was a macro from GLib on win32 until
		glib 2.13.2. It's undefined after that.
		Thanks to Marcus Brinkmann for the heads-up!

2009-03-31 [colin]	3.7.1cvs32

	* src/folder_item_prefs.c
		Copy folder settings with prefs

2009-03-31 [colin]	3.7.1cvs31

	* src/prefs_account.c
		Don't use un-sensitive checkboxes in Privacy tab
		when privacy system in None (makes unchecking 
		painful when no privacy plugin is loaded)

2009-03-30 [colin]	3.7.1cvs30

	* src/folder.c
	* src/folder.h
	* src/imap.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/prefs_account.c
	* src/prefs_account.h
	* src/summaryview.c
	* src/summaryview.h
		Fix bug 1866, 'Claws should make use of the IMAP 'deleted' flag'
		Add an option on the Receive page of IMAP account preferences:
		"Move deleted mails to trash and expunge immediately". This
		option defaults to TRUE to avoid changing the existing behaviour.
		Setting it to FALSE prevents automatic expunging. 
		Also, add Tools/Expunge and View/Hide deleted messages menu items
		(View/Hide deleted message being a per-folder setting, and behaving,
		like View/Hide read messages).

2009-03-30 [colin]	3.7.1cvs29

	* src/imap.c
		Fix Redhat bug 486422, Ubuntu bug 486422: Don't
		ask for IMAP password when using GSSAPI auth

2009-03-27 [colin]	3.7.1cvs28

	* src/folder.c
		Fix cvs14, make sure we mark non-existent caches dirty
		(or they never get written)

2009-03-27 [colin]	3.7.1cvs27

	* src/imap.c
		Fix tag update when all tags are removed 
		from another client

2009-03-25 [colin]	3.7.1cvs26

	* configure.ac
		Fix configure.ac, thanks to Pawel

2009-03-25 [colin]	3.7.1cvs25

	* src/news.c
	* src/etpan/nntp-thread.c
		Fix header fetching (NG/To/Cc). Fixes 
		bug 1883, 'Message processing fails to 
		act on Newsgroups: field'

2009-03-23 [colin]	3.7.1cvs24
